--- a/index.css
+++ b/index.css
@@ -9,3 +9,21 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+#dialogueBox {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
